--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
-    "formik": "^2.2.9",
     "cdbreact": "^1.5.14",
     "date-fns": "^2.29.3",
     "datepicker": "0.0.0",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
@@ -27,6 +27,7 @@
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "toastify": "^2.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
