--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "/*"
+  from = "*"
   to = "https://college-test-server.onrender.com/:splat"
   status = 200
   force = true
